Navigation between pages is now working

--- a/frontend/app/components/camera-access-check/camera-access-check.html
+++ b/frontend/app/components/camera-access-check/camera-access-check.html
@@ -1,1 +1,1 @@
-<navbar section-name="CAMERA" left-icon="glyphicon glyphicon-eye-open"></navbar>
+<navbar section-name="CAMERA" left-icon="glyphicon glyphicon-eye-open" left-redirect="/data"></navbar>
