--- a/frontend/app/components/data-access-check/data-access-check.html
+++ b/frontend/app/components/data-access-check/data-access-check.html
@@ -1,4 +1,4 @@
-<navbar section-name="DATA" right-icon="glyphicon glyphicon-camera"></navbar>
+<navbar section-name="DATA" right-icon="glyphicon glyphicon-camera" right-redirect="/camera"></navbar>
 <div class="row">
     <div class="col-xs-6 text-center">
         buttons
