Added and styled check access buttons

--- a/frontend/app/components/data-access-check/data-access-check.html
+++ b/frontend/app/components/data-access-check/data-access-check.html
@@ -1,8 +1,29 @@
 <navbar section-name="DATA" right-icon="glyphicon glyphicon-camera" right-redirect="/camera"></navbar>
 <div class="row">
-    <div class="col-xs-6 text-center">
-    </div>
-    <div class="col-xs-6 text-center">
-        statuses
+    <div class="col">
+        <div class="access-check-row row">
+            <div class="col-xs-3 col-xs-offset-3 text-center">
+                <input class="btn access-check-button" value="{{ 'CHECK_PHOTOS' | translate}}" type="button"/>
+            </div>
+            <div class="col-xs-2 col-xs-offset-1">
+                status
+            </div>
+        </div>
+        <div class="access-check-row row">
+            <div class="col-xs-3 col-xs-offset-3 text-center">
+                <input class="btn access-check-button" value="{{ 'CHECK_CONTACTS' | translate}}" type="button"/>
+            </div>
+            <div class="col-xs-2 col-xs-offset-1">
+                status
+            </div>
+        </div>
+        <div class="access-check-row row">
+            <div class="col-xs-3 col-xs-offset-3 text-center">
+                <input class="btn access-check-button" value="{{ 'CHECK_MESSAGES' | translate}}" type="button"/>
+            </div>
+            <div class="col-xs-2 col-xs-offset-1">
+                status
+            </div>
+        </div>
     </div>
 </div>
