Added camera preview, but it does not work on Nexus 7 so far (it did work on demo page I took the sources from...)

--- a/frontend/app/components/camera-access-check/camera-access-check.html
+++ b/frontend/app/components/camera-access-check/camera-access-check.html
@@ -1,1 +1,11 @@
 <navbar section-name="CAMERA" left-icon="glyphicon glyphicon-eye-open" left-redirect="/data"></navbar>
+<div class="row text-center">
+    <div class="col-sm-12" id="errorMsg">
+    </div>
+</div>
+<div class="row text-center">
+    <div class="col-sm-12">
+        <video id="videoElement" autoplay>
+        </video>
+    </div>
+</div>
