--- a/frontend/app/components/data-access-check/data-access-check.html
+++ b/frontend/app/components/data-access-check/data-access-check.html
@@ -3,7 +3,7 @@
     <div class="col">
         <div class="access-check-row row">
             <div class="col-xs-3 col-xs-offset-3 text-center">
-                <input class="btn access-check-button" value="{{ 'CHECK_PHOTOS' | translate}}" type="button"/>
+                <input class="btn access-check-button" value="{{ 'CHECK_PHOTOS' | translate}}" type="button" data-ng-click="vm.openPhotoCheckModal()"/>
             </div>
             <div class="col-xs-2 col-xs-offset-1">
                 status
